[project]
name = "hackathon-ai-environment"
version = "0.1.0"
description = "Multi-agent hackathon prototype with deterministic rewards and Q-learning control."
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
